# minid

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  mkdocs.yml
.github/workflows/: ci.yml
crates/microctl/: Cargo.toml
crates/microctl/src/: main.rs
crates/minid/: Cargo.toml
crates/minid/src/: cgroup.rs  config.rs  container.rs  error.rs  lib.rs  mount.rs  namespace.rs  state.rs
docs/: architecture.md  design-decisions.md  index.md  security.md
examples/: README.md
tests/: README.md
