[package]
name = "minid"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for a minimal OCI-style container runtime"

[dependencies]
nix = { version = "0.29", features = ["sched", "mount", "signal", "process", "fs", "hostname"] }
oci-spec = { version = "0.7", features = ["runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
